--- a/templates/home.html
+++ b/templates/home.html
@@ -35,9 +35,9 @@
 <!-- Live Sale Section -->
 <div class="container">
   <div class="row bg-danger text-center p-5 text-white border-bottom shadow">
-    <h1>SALE IS LIVE NOW</h1>
-    <span>5% Instant Discount on Axis Bank Credit and Debit Card</span>
-    <small class="fw-lighter">Term and Condition Applied (For details visit Bank's official Website)</small>
+    <h1>ORDER AND GET THE YOUR ITEMS</h1>
+    <span>Cash On Delivery Service Avai</span>
+    <small class="fw-lighter">Term and Condition Applied (15% Vat)</small>
   </div>
 </div> 
 <!-- End Live Sale Section -->
@@ -107,26 +107,7 @@
 <!-- End Payment Info Section -->
 
 <!-- 2nd Product Slider -->
-<div class="mx-3">
- <h2>Trending Deals</h2>
- <!-- Slider 2 -->
- <div class="owl-carousel" id="slider2">
-   {% for item in items %}
-  <div class="item"><img src="{% static 'images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 1</span><br><span class="fs-5">Rs. 500</span></div>
-  {% endfor %}
-  <!--<div class="item"><img src="{% static 'images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 2</span><br><span class="fs-5">Rs. 300</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 3</span><br><span class="fs-5">Rs. 100</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/9.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 4</span><br><span class="fs-5">Rs. 700</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/8.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 5</span><br><span class="fs-5">Rs. 500</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 6</span><br><span class="fs-5">Rs. 400</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/5.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 7</span><br><span class="fs-5">Rs. 500</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 8</span><br><span class="fs-5">Rs. 300</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 9</span><br><span class="fs-5">Rs. 600</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/7.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 10</span><br><span class="fs-5">Rs. 900</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/6.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 11</span><br><span class="fs-5">Rs. 100</span></div> -->
-  <!-- <div class="item"><img src="{% static 'images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 12</span><br><span class="fs-5">Rs. 200</span></div> -->
- </div>
-</div>
+
 <!-- End 2nd Product Slider -->
 
 {% endblock body %}
