--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -153,8 +153,8 @@
                                        {% endif %}
                                        <td>
                                               {% if order.status == 'Pending' %}
-                                              <button type="button" class="btn btn-outline-success btn-sm bg-success text-light" >edit</button>
-                                              <button type="button" class="btn btn-outline-danger btn-sm bg-danger text-light" >delete</button>
+                                              <!-- <button type="button" class="btn btn-outline-success btn-sm bg-success text-light" id="edit-order" data-orderID="{{order.id}}" >edit</button> -->
+                                              <button data-order_id = "{{order.id}}" type="button" class="btn btn-outline-danger btn-sm bg-danger text-light" id="delete-order">delete</button>
                                               {% endif %}
                                        </td>
                                      </tr>
@@ -234,3 +234,43 @@
   </div>
 </div>
 {% endblock body %}
+
+{% block JS %}
+<script>
+       $("tbody").on("click","#delete-order",function(){
+              
+              Swal.fire({
+                     title: 'Do you want to delete this order?',
+                     showDenyButton: true,
+                     confirmButtonText: `Yes`,
+                     denyButtonText: `No`,
+                     }).then((result) => {
+                     /* Read more about isConfirmed, isDenied below */
+                     if (result.isConfirmed) {
+                            var id = this.dataset.order_id;
+                            var url = "/order-delete/"
+                            fetch(url,{
+                                   method:"POST",
+                                   headers: { "Content-Type": "application/json",
+                                   "X-CSRFToken":csrftoken
+                                   },
+                                   body: JSON.stringify({ 'order_id': id }),
+                            })
+                            .then((Response)=>{
+                                   location.reload();
+                            })
+                            .then((data) => {
+                                   console.log("data", data);
+                                   //var qty = document.getElementById("quantity").innerHTML=data;
+                                   location.reload();
+                            });
+                     
+                     } else if (result.isDenied) {
+                    
+                     }
+                     })
+
+              });
+</script>
+
+{% endblock JS %}
