--- a/templates/base1.html
+++ b/templates/base1.html
@@ -230,10 +230,16 @@
     <script type="text/javascript" src="{% static 'js/myscript.js' %}" async></script>
     <!-- <script type="text/javascript" src="{% static 'js/formValidation.js' %}" async></script> -->
     <script type="text/javascript" src="{% static 'js/additional-methods.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jqueryValidation.js' %}"></script>
+
+    <!-- for login -->
+    <script type="text/javascript" src="{% static 'js/jqueryValidation.js' %}"></script>  
+    <!-- for register -->
     <script type="text/javascript" src="{% static 'js/jquery.register.js' %}"></script>
+    <!-- for change password -->
     <script type="text/javascript" src="{% static 'js/jquery.change_password.js' %}"></script>
+    <!-- for checkout -->
     <script type="text/javascript" src="{% static 'js/jquery.checkout.js' %}"></script>
+    <!-- CDN for sweet alert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
     {% for msg in messages %}
@@ -257,14 +263,7 @@
 
     {% endfor %}
 
-    <script type="text/JavaScript">
-      $(document).ready(function(){
-        var msg = document.getElementById("msg-info").innerText
-        if(msg){
-          $(".toast").toast('show');
-        }
-      })
-    </script>
+
 
     {% block JS %}
 
