--- a/templates/customerregistration.html
+++ b/templates/customerregistration.html
@@ -8,7 +8,7 @@ Registration{% endblock title %} {% block body %}
       <h3 class="text-center">Registration Here</h3>
       <hr />
 
-      <form action="" method="post" class="shadow p-5 needs-validation" id="form" name="registerForm" onsubmit="return RegisterValidation()" novalidate>
+      <form action="" method="post" class="shadow p-5 needs-validation" id="form" name="registerForm" novalidate>
          {% csrf_token %}
         <div class="mb-3 form-group" id="reg_username">
           <label for="reg_username" class="form-label">Username</label>
@@ -47,27 +47,5 @@ Registration{% endblock title %} {% block body %}
     </div>
   </div>
 </div>
-<!-- <script src="{% static 'js/validate.js' %}"></script> -->
-<script>
-//   // Example starter JavaScript for disabling form submissions if there are invalid fields
-// (function () {
-//     'use strict'
-  
-//     // Fetch all the forms we want to apply custom Bootstrap validation styles to
-//     var forms = document.querySelectorAll('.needs-validation')
-  
-//     // Loop over them and prevent submission
-//     Array.prototype.slice.call(forms)
-//       .forEach(function (form) {
-//         form.addEventListener('submit', function (event) {
-//           if (!form.checkValidity()) {
-//             event.preventDefault()
-//             event.stopPropagation()
-//           }
-  
-//           form.classList.add('was-validated')
-//         }, false)
-//       })
-//   })()
-// </script>
+
 {% endblock body %}
